--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dattam Labs</title>
-    <meta name="description" content="Dattam Labs" />
-    <meta name="author" content="Dattam Labs" />
 
-    <meta property="og:title" content="Dattam Labs" />
-    <meta property="og:description" content="Dattam Labs" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://dattam.in/opengraph-image-p98pqg.png" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dattam Labs</title>
+  <meta name="description" content="Dattam Labs" />
+  <meta name="author" content="Dattam Labs" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="icon" href="/logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/logo.png" type="image/x-icon" />
+
+  <meta property="og:title" content="Dattam Labs" />
+  <meta property="og:description" content="Dattam Labs" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://dattam.in/logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
